force-app/main/objects/Discount_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Applied_On__c</fullName>
        <label>Discount Applied On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Summary_ID__c</fullName>
        <displayFormat>FD-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Discount Summary ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deal Length</fullName>
                </value>
                <value>
                    <fullName>Cross Sell</fullName>
                </value>
                <value>
                    <fullName>Customer Type</fullName>
                </value>
                <value>
                    <fullName>Discretionary</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level/Type/Years</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Discount_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Target Customer</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>&lt;1</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3+</fullName>
                </value>
                <value>
                    <fullName>Level I - Commercial/ Market Director</fullName>
                </value>
                <value>
                    <fullName>Level II - Managing Director</fullName>
                </value>
                <value>
                    <fullName>Level III - Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>Level IV - CEO/ CFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Discount Summary</relationshipLabel>
        <relationshipName>Discount_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Discount__c</fullName>
        <description>This field gets the average value of discount given on products, when uploaded from Pricing Configurator</description>
        <label>Product Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reason_for_the_Discretionary_Discount__c</fullName>
        <label>Discount Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget constraints - contacts not having sign-off over a certain amount</fullName>
                </value>
                <value>
                    <fullName>Budget constraints - client has specific limit</fullName>
                </value>
                <value>
                    <fullName>Bundling to make overall price look cheaper for the client</fullName>
                </value>
                <value>
                    <fullName>Client not seeing full value - needing to make the offer more attractive</fullName>
                </value>
                <value>
                    <fullName>Competitors offering something cheaper so we need to price match</fullName>
                </value>
                <value>
                    <fullName>End of month</fullName>
                </value>
                <value>
                    <fullName>End of quarter</fullName>
                </value>
                <value>
                    <fullName>New business - discounts on trials / first-time buyers</fullName>
                </value>
                <value>
                    <fullName>Pilot projects - discounting on the expectation or promise of future work</fullName>
                </value>
                <value>
                    <fullName>Renewals - underusing in their contract</fullName>
                </value>
                <value>
                    <fullName>Renewals - price comparative to previous year</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Client able to pay above List Price</fullName>
                </value>
                <value>
                    <fullName>Agreed in Master Standard Agreement</fullName>
                </value>
                <value>
                    <fullName>Improvement on previous contract</fullName>
                </value>
                <value>
                    <fullName>Competitor offering similar terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Discount__c</fullName>
        <description>This field gets the average value of discount given on services, when uploaded from Pricing Configurator</description>
        <label>Service Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Discount Summary</label>
    <nameField>
        <displayFormat>FD{00000}</displayFormat>
        <label>Discount Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>